--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,9 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-		<link rel="stylesheet" href="jquery/jquery.mobile-1.4.5.min.css" />
+		<link rel="stylesheet" href="themes/lastFridayNight.min.css" />
+        <link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
 		<link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.css' rel='stylesheet' />
         <title>Hello World</title>
     </head>
@@ -84,6 +86,7 @@
 
 			<div role="main" class="ui-content" id="packagemap" stype="height:600px;">
 			</div>
+
 			
 			<div data-role="footer" data-position="fixed" >
 				<h1><a href="#one">Back!</a></h1>
