--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
     <body>
 	
 		<div data-role="page" id="one">
-			<div data-role="header">
+			<div data-role="header" class="ui-header">
 				<h1>Last Night Recorder</h1>
 			</div>
 
@@ -75,7 +75,7 @@
 			</div>
 
 			<div data-role="footer" data-position="fixed">
-				<h4><a href="#two">View Last Record!</a></h4>
+				<h4><a href="#two" data-transition="slide">View Last Record!</a></h4>
 			</div>
 		</div>
 		
@@ -89,7 +89,7 @@
 
 			
 			<div data-role="footer" data-position="fixed" >
-				<h1><a href="#one">Back!</a></h1>
+				<h1><a href="#one" data-transition="slide" data-direction="reverse">Back!</a></h1>
 			</div>
 		</div>
 		
