--- a/www/index.html
+++ b/www/index.html
@@ -72,18 +72,17 @@
                     </div>
                 </form>
             </div>
+			<div id="stop-panel" style="display:none">
+				<form>
+					<div class="ui-input-btn ui-btn ui-corner-all ui-shadow">
+						Stop!
+						<input data-enhanced="true" value="Stop!" type="button" id="stop-button">
+					</div>
+				</form>
+			</div>
         </div>
-		
-		<div id="stop-panel" style="display:none">
-			<form>
-				<div class="ui-input-btn ui-btn ui-corner-all ui-shadow">
-					Stop!
-					<input data-enhanced="true" value="Stop!" type="button" id="stop-button">
-				</div>
-			</form>
-		</div>
 
-        <div data-role="footer" data-position="fixed" class="ui-input-btn ui-btn ui-corner-all ui-shadow">
+        <div data-role="footer" data-position="fixed" class="">
             <h4><a href="#two" data-transition="slide">Where Was I?</a></h4>
         </div>
     </div>
